--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -26,7 +26,7 @@
   
         <a class="nav" id="mail" href="mailto:martiiiesposito@gmail.com">Looking forward to hearing from you!</a>
    
-
+    <div id="all">
     <div id="projectgallery"> 
       <img src="../assets/calendario/Spiral_Book_Mockup_4.png"> 
       <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 2.png">
@@ -97,6 +97,6 @@
       <p class="listelement"> La storia dimostra</p>
       <p class="listelement"> Bullet Journal</p>
     </div> -->
-
+  </div>
   </body>
 </html>
