--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -33,6 +33,7 @@
   <!--   MAIL TO -->
   <a class="nav" id="mail" href="mailto:martiiiesposito@gmail.com">Looking forward to hearing from you!</a>
 
+  <div id="all">
 
   <!--   GALLERIA PROGETTO-->
   <div id="projectgallery">
@@ -112,6 +113,7 @@
     </div>
 
   </div>
+</div>
 
   <!-- 
   <div id="list">
