--- a/pages/n01.html
+++ b/pages/n01.html
@@ -34,6 +34,8 @@
   <a class="nav" id="mail" href="mailto:martiiiesposito@gmail.com">Looking forward to hearing from you!</a>
 
 
+  <div id="all">
+
   <!--   GALLERIA PROGETTO-->
   <div id="projectgallery">
     <img  src="../assets/n01/_JPN3474.jpg">
@@ -118,7 +120,7 @@
     <p class="listelement"> Bullet Journal</p>
   </div> -->
 
-
+</div>
 </body>
 
 </html>
