--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
       I love letters, drawing, books, coding and more or less everything related to visual communication.
     </p>
     <p class="selfp padtop">
-      I am also a true geek, and I spend my days between my youtube playlist intitled “things I wanna learn” and
-      practicing new climbings and crazy drops on aerial silks and hoop. </p>
+      I am also a true geek, and I spend my days between my youtube playlist intitled “things I wanna learn” and practicing new climbings and drops on aerial silks and hoop. </p>
     <p class="selfp padtop">
-      Here is a daisy to thank you for your attention :)</p>
+      Here is a daisy to thank you for your attention!</p>
   </div>
 
   <img id="marghe" src="./assets/manine/marghe.png">
@@ -64,30 +63,6 @@
     <a class="contacts" href="./assets/Martina Esposito_CV.pdf" download>Curriculum Vitae</a>
   </div>
 
-  <!-- ELENCO DI PROGETTI A DESTRA 
-  <div id="list">
-
-    <p class="listelement listanno">2023</p>
-    <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
-    <p class="listelement"> N10 </p>
-    <p class="listelement"> Book of self</p>
-    <p class="listelement"> Drawing app</p>
-    <p class="listelement"> Zoo Agency</p>
-
-    <p class="listelement listanno">2022</p>
-    <p class="listelement"> Un'estate</p>
-    <p class="listelement"> Valli Unite</p>
-    <p class="listelement"> Factanza</p>
-    <p class="listelement">7. <a href="./pages/calendario.html">Buongiorno, ogni giorno</a></p>
-    <p class="listelement"> Martas Nature Bar </p>
-
-    <p class="listelement listanno">2021</p>
-    <p class="listelement"> Knockout</p>
-    <p class="listelement"> Design your way</p>
-    <p class="listelement"> La storia dimostra</p>
-    <p class="listelement"> Bullet Journal</p>
-  </div>
--->
   <script src="./about.js"></script>
 
 </body>
