--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@
   <!--   CONTATTI -->
   <div id="contact">
     <p class="contacts">Contacts:</p>
-    <p class="contacts">+39 340 1667114</p>
-    <a class="contacts" href="mailto:martiiiesposito@gmail.com">martiiiesposito@gmail.com</a>
+    <p class="contacts">+39 340 1667114</br>
+      martiiiesposito@gmail.com
+    <!-- <a class="contacts" href="mailto:martiiiesposito@gmail.com">martiiiesposito@gmail.com</a> -->
+  </p>
     <a class="contacts" href="https://www.instagram.com/martiiiesposito/">@martiiiesposito</a>
     <a class="contacts" href="https://github.com/martinaesposito">github</a>
     <a class="contacts" href="https://www.linkedin.com/in/martiiiesposito/">linkedin</a>
     </br></br>
-
     <a class="contacts" href="./assets/Martina Esposito_CV.pdf" download>Curriculum Vitae</a>
   </div>
 
