--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
 
   <!--   ELEMENTI IN ALTO -->
-  <p class="nav" id="io">Hi, my name is Martina :)</p>
-  <p class="nav" id="works"> and these are my works</p>
+  <!-- <p class="nav" id="io">Hi, my name is Martina :)</p>
+  <p class="nav" id="works"> and these are my works</p> -->
 
   <!--   PRESENTAZIONE -->
   <div id="prescontainer">
