--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       Here is a daisy to thank you for your attention!</p>
   </div>
 
-  <img id="marghe" src="./assets/manine/marghe.png">
+  <!-- <img id="marghe" src="./assets/manine/marghe.png"> -->
 
   <!--   CONTATTI -->
   <div id="contact">
