--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 
   <!--   ELEMENTI IN ALTO -->
-  <p class="nav" id="io">Hi, my name is Martina :)</p>
+  <p class="nav" id="io">Ciao, I'm Martina :)</p>
   <p class="nav" id="works"> and these are my works</p>
 
   <!--   PRESENTAZIONE -->
@@ -52,7 +52,7 @@
 
   <!--   CONTATTI -->
   <div id="contact">
-    <p class="contacts label">Contacts:</p>
+    <p class="contacts label">Contacts</p>
     <p class="contacts">+39 340 1667114</br>
       martiiiesposito@gmail.com
     <!-- <a class="contacts" href="mailto:martiiiesposito@gmail.com">martiiiesposito@gmail.com</a> -->
