--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@
     <p class="selfp padtop1">
       Ciao! </p>
     <p class="selfp">
-      Ciao!</br>
       My name is Martina Esposito and I’m a freelance graphic designer and researcher based in Milan.
     </p>
-    <p class="selfp">
+    <p class="selfp padtop">
       I love engaging with both design theory and practice, looking for playful yet thoughtful ways to communicate.
     </p>
     <p class="selfp padtop">
