--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>  </title>
-    <link rel="icon" type="image/x-icon" href="./assets/margherita.png">
+    <link rel="icon" type="image/x-icon" href="./assets/blossom.png">
 
      <!--   FONT -->  
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
