--- a/pages/n01.html
+++ b/pages/n01.html
@@ -7,7 +7,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/x-icon" href="./assets/margherita.png">
+  <link rel="icon" type="image/x-icon" href="./assets/blossom.png">
 
   <!--  STYLE -->
   <link rel="stylesheet" type="text/css" href="../style.css">
