--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
 
   <!--   ELEMENTI IN ALTO -->
-  <p class="nav" id="io">Ciao, I'm Martina :)</p>
-  <p class="nav" id="works"> and these are my works</p>
+  <a class="nav" id="io">Ciao, I'm Martina :)</a>
+  <a class="nav" id="works"> and these are my works</a>
 
   <!--   PRESENTAZIONE -->
   <div id="prescontainer">
