--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/awh5ros.css">
 
   <!--  LIBRARIES -->
   <script src="./libraries/p5.min.js"></script>
