--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <p class="selfp padtop1">Ciao! </p>
     <p class="selfp">My name is Martina Esposito and I’m a freelance graphic designer and researcher based in Milan.
     </p>
-    <p class="selfp padtop">I love engaging with both design theory and practice, looking for playful yet thoughtful ways to communicate.
+    <p class="selfp padtop">I love tinkering with both design theory and practice, looking for playful and thoughtful ways to communicate.
     </p>
     <p class="selfp padtop">My work ranges from curating art and design exhibitions, to academic research and teaching, to experimenting with both digital and analogue techniques, such as creative coding and risograph printing.</p>
     <p class="selfp padtop">Looking forward to hearing from you :)</p>
