--- a/index.html
+++ b/index.html
@@ -39,12 +39,9 @@
     <p class="selfp">My name is Martina Esposito and I’m a freelance graphic designer and researcher based in Milan.
     </p>
     <p class="selfp padtop">My work ranges from curating art and design exhibitions, to academic research and teaching, to experimenting with both digital and analogue techniques, such as creative coding and risograph printing.</p>
-    <p class="selfp padtop">I love tinkering with both design theory and practice, looking for playful yet thoughtful ways to communicate. Through my projects, I hope to spark the same curiosity I feel when discovering something new, expressing the beauty of learning in a fun and interactive way.
-    </p>
+    <p class="selfp padtop">I love tinkering with both design theory and practice, looking for ways to turn complex ideas into meaningful experiences. With my projects, I aim to spark the same curiosity I feel when learning something new.</p>
     <p class="selfp padtop">Looking forward to hearing from you :)</p>
   </div>
-
-  <!-- <img id="marghe" src="./assets/manine/marghe.png"> -->
 
   <!--   CONTATTI -->
   <div id="contact">
@@ -60,7 +57,12 @@
     <a class="contacts" href="./assets/Martina Esposito_CV.pdf" download>Curriculum Vitae</a> -->
   </div>
 
+   <!--   CV -->
+   <div id="cv-container">
+    </div>
+
   <script src="./about.js"></script>
+  <script src="./cv.js"></script>
 
 </body>
 
