--- a/index.html
+++ b/index.html
@@ -53,12 +53,19 @@
     <a class="contacts" href="https://www.instagram.com/martiiiesposito/">@martiiiesposito</a>
     <a class="contacts" href="https://github.com/martinaesposito">github</a>
     <a class="contacts" href="https://www.linkedin.com/in/martiiiesposito/">linkedin</a>
-    <!-- </br></br>
-    <a class="contacts" href="./assets/Martina Esposito_CV.pdf" download>Curriculum Vitae</a> -->
   </div>
 
    <!--   CV -->
    <div id="cv-container">
+    <div class="cv-section"> 
+      <p class="label">Experience</p>
+      <div class="cv-element">
+        <div id="title" class="cv-el-value">franci</div>
+        <div id="role" class="cv-el-value"> franci</div>
+        <div id="place" class="cv-el-value">franci </div>
+        <div id="year" class="cv-el-value"> 2023</div>
+      </div>
+    </div>
     </div>
 
   <script src="./about.js"></script>
