--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
   <div id="contact">
     <p class="contacts label">Contacts</p>
     <p class="contacts">+39 340 1667114</br>
-      martiiiesposito@gmail.com
+      martiiiesposito@gmail.com</br>
     <!-- <a class="contacts" href="mailto:martiiiesposito@gmail.com">martiiiesposito@gmail.com</a> -->
   </p>
-    <a class="contacts" href="https://www.instagram.com/martiiiesposito/">@martiiiesposito</a>
+    <a class="contacts" href="https://www.instagram.com/martiiiesposito/">instagram</a>
     <a class="contacts" href="https://github.com/martinaesposito">github</a>
     <a class="contacts" href="https://www.linkedin.com/in/martiiiesposito/">linkedin</a>
   </div>
