--- a/about.html
+++ b/about.html
@@ -29,9 +29,10 @@
 
 <body>
 
-  <!--   ELEMENTI IN ALTO -->
-  <a class="nav" id="io">Ciao, I'm Martina :)</a>
-  <a class="nav" id="works"> and these are my works</a>
+    <!--   ELEMENTI IN ALTO -->
+    <a class="nav" id="io" href="about.html">Ciao, I'm Martina :)</a>
+    <a class="nav" id="works" href="index.html"> and these are my works</a>
+
 
   <!--   PRESENTAZIONE -->
   <div id="prescontainer">
