--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!--  STYLE -->
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <link rel="stylesheet" type="text/css" href="./about.css" />
+    <link rel="stylesheet" type="text/css" href="./index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
     <!--   FONT -->
@@ -32,5 +32,22 @@
     <!--   ELEMENTI IN ALTO -->
     <a class="nav" id="io" href="about.html">Ciao, I'm Martina :)</a>
     <a class="nav" id="works" href="index.html"> and these are my works</a>
+
+    <!-- PROGETTI -->
+    <div id="proj-container-grid" class="hidden">
+      <div id="proj-container-col-1"></div>
+      <div id="proj-container-col-2"></div>
+      <div id="proj-container-col-3"></div>
+    </div>
+    <div id="proj-container-full"></div>
+
+    <!-- switch -->
+    <div id="switch" class="nav">
+      <div id="full" class="selected">full</div>
+      /
+      <div id="grid">grid</div>
+    </div>
+
+    <script src="index.js" defer></script>
   </body>
 </html>
