--- a/project.html
+++ b/project.html
@@ -32,5 +32,19 @@
     <!--   ELEMENTI IN ALTO -->
     <a class="nav" id="io" href="about.html">Ciao, I'm Martina :)</a>
     <a class="nav" id="works" href="index.html"> and these are my works</a>
+
+    <!--   Progetto -->
+    <div id="proj-container">
+      <div id="proj-title-descr">
+        <div id="titolo"></div>
+        <div id="cat-anno">
+          <div id="categoria"></div>
+          <div id="anno"></div>
+        </div>
+        <div id="descrizione"></div>
+      </div>
+
+      <div id="proj-info"></div>
+    </div>
   </body>
 </html>
