--- a/project.html
+++ b/project.html
@@ -36,15 +36,20 @@
     <!--   Progetto -->
     <div id="proj-container">
       <div id="proj-title-descr">
-        <div id="titolo"></div>
+        <div id="titolo">titolo</div>
         <div id="cat-anno">
-          <div id="categoria"></div>
-          <div id="anno"></div>
+          <div id="categoria">art direction</div>
+          <div id="anno">2022</div>
         </div>
-        <div id="descrizione"></div>
+        <div id="descrizione">lorem</div>
       </div>
 
-      <div id="proj-info"></div>
+      <div id="proj-info">
+        <div id="team">
+          <span class="label"> team </span>
+          persona 1
+        </div>
+      </div>
     </div>
   </body>
 </html>
