--- a/project.html
+++ b/project.html
@@ -49,6 +49,10 @@
           <span class="label"> team </span>
           persona 1
         </div>
+        <div id="team">
+          <span class="label"> team </span>
+          persona 1
+        </div>
       </div>
     </div>
   </body>
