--- a/about.html
+++ b/about.html
@@ -68,7 +68,8 @@
     </div> -->
     </div>
 
-  <script src="./about.js"></script>
+  <script src="about.js"></script>
+  <script src="js.js" ></script>
 
 </body>
 
