--- a/project.html
+++ b/project.html
@@ -59,5 +59,6 @@
     <div id="gallery"></div>
 
     <script src="project.js" defer></script>
+    <script src="js.js"></script>
   </body>
 </html>
